--- a/src/App.css
+++ b/src/App.css
@@ -292,7 +292,7 @@ padding: 0px 20px;
   width: 180px;
 }
 .news-card{
-  height: 300px !important;
+  height: 100%;
 }
 .news-image-container{
   display: flex !important;
@@ -351,6 +351,10 @@ width: 70%;
 }
 .exchange-image{
   margin: 0px 10px !important;
+}
+
+.row-title-exchanges {
+  margin-bottom: 1rem;
 }
 .search-crypto{
   margin: 20px auto 30px auto;
